
syntax = "proto3";
package proto;

option go_package = "github.com/veraison/services/proto";

import "evidence.proto";
import "result.proto";

message AppraisalContext {
	EvidenceContext evidence = 1;
	AttestationResult result = 2;
}
